# Cliox

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh
sample_count_lines/: Dockerfile  docker-compose.yaml  entrypoint.sh
sample_count_lines/algorithm/: .gitignore  pyproject.toml
sample_count_lines/algorithm/src/: main.py
sample_count_lines/algorithm/src/implementation/: algorithm.py
sample_count_lines/algorithm/tests/: test_main.py
sample_timeseries_forecast/: Dockerfile  docker-compose.yaml  entrypoint.sh
sample_timeseries_forecast/_data/ddos/: timeseries-example
sample_timeseries_forecast/_data/inputs/: algoCustomData.json
sample_timeseries_forecast/_data/inputs/timeseries-example/: 0
sample_timeseries_forecast/_data/outputs/: parameters.json
sample_timeseries_forecast/algorithm/: README.md  pyproject.toml  requirements.txt
sample_timeseries_forecast/algorithm/src/implementation/: algorithm.py  data.py  utils.py  window.py
sample_timeseries_forecast/typings/oceanprotocol_job_details/: ocean.pyi
template/: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh
template/_data/outputs/: model.pkl  result.json  scores.csv  timeseries_features.pkl
template/algorithm/: .gitignore  pyproject.toml  requirements.txt
template/algorithm/src/: main.py
template/algorithm/src/implementation/: algorithm.py  data.py  enron-sample-data.csv  enron-sample-data.json  estimators.py  preprocess.py  test_rag.py
template/algorithm/tests/: test_main.py
template/typings/oceanprotocol_job_details/: config.pyi  job_details.pyi
(+5 files in other folders)
