[project]
name = "algorithm"
version = "0.1.0"
description = ""
authors = [{ name = "AgrospAI", email = "<your-name>@udl.cat" }]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytest = "^8.3.4"
oceanprotocol-job-details = "^0.0.5"
