[project]
name = "algorithm"
version = "0.1.0"
description = ""
authors = [{ name = "AgrospAI", email = "agrospai@udl.cat" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pytest>=8.3.4,<9",
    "oceanprotocol-job-details==0.1.1",
    "orjson>=3.10.15,<4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
